--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "./src/index.ts",
   "scripts": {
     "start": "ts-node ./src/index.ts",
-    "run": "node ./dist/index.js",
-    "test": "ts-node ./src/test.ts"
+    "run": "node ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,10 +20,10 @@
     "isomorphic-unfetch": "^4.0.2",
     "lyrics-finder": "^21.7.0",
     "music-metadata": "7.13.4",
-    "play-dl": "^1.9.7",
-    "spotify-url-info": "^3.2.8",
+    "play-dl": "^1.9.6",
+    "spotify-url-info": "^3.2.6",
     "string-progressbar": "^1.0.4",
-    "systeminformation": "^5.21.9",
+    "systeminformation": "^5.21.8",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "youtube-sr": "^4.3.4"
