add object "CommandTrigger" + customisable main color

--- a/config.env.example
+++ b/config.env.example
@@ -1,9 +1,9 @@
-TOKEN = ""
-MAX_PLAYLIST_SIZE = 500
-PREFIX = "!"
-PRUNING = true
-LOCALE = "fr"
-STAY_TIME = 30
-#audio quality : 0 = minimum 2 = maximum
-AUDIO_QUALITY = 0 
-DEFAULT_VOLUME = 100
+TOKEN = "token" # your discord token
+MAX_PLAYLIST_SIZE = 500 # Maximum number of music fetches per playlist
+PREFIX = "!" # Command prefix
+AUTO_DELETE = true # Set to true to automatically delete bot responses
+LOCALE = "en" # Language setting, it must exist in the local folder
+STAY_TIME = 30 # Duration before disconnection when the bot is alone
+AUDIO_QUALITY = 0 # 0 = minimum, 2 = maximum
+DEFAULT_VOLUME = 100 # Default volume setting [0;100]
+MAIN_COLOR = "#69ADC7" # Main color for the bot
