--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@discordjs/voice": "^0.16.0",
     "array-move": "3.0.1",
-    "axios": "^1.5.1",
+    "axios": "^1.6.0",
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "ffmpeg-static": "^5.2.0",
@@ -22,19 +22,21 @@
     "lyrics-finder": "^21.7.0",
     "music-metadata": "7.13.4",
     "play-dl": "^1.9.7",
-    "spotify-url-info": "^3.2.8",
+    "spotify-url-info": "^3.2.9",
     "string-progressbar": "^1.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
-    "youtube-sr": "^4.3.4"
+    "youtube-sr": "^4.3.9"
   },
   "devDependencies": {
-    "@types/i18n": "^0.13.7"
+    "@types/i18n": "^0.13.8"
   },
   "optionalDependencies": {
     "@discordjs/opus": "^0.9.0",
+    "bufferutil": "^4.0.8",
     "libsodium-wrappers": "^0.7.13",
     "sodium-native": "^4.0.4",
-    "tweetnacl": "^1.0.3"
+    "tweetnacl": "^1.0.3",
+    "utf-8-validate": "^6.0.3"
   }
 }
