--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/voice": "^0.17.0",
-    "@distube/ytdl-core": "^4.13.4",
     "array-move": "3.0.1",
     "axios": "^1.7.2",
-    "discord.js": "^14.15.2",
+    "discord.js": "^14.15.3",
     "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
     "i18n": "^0.15.1",
     "isomorphic-unfetch": "^4.0.2",
-    "lru-cache": "^10.2.2",
+    "lru-cache": "^10.3.0",
     "lyrics-finder": "^21.7.0",
     "music-metadata": "7.13.4",
     "play-dl": "^1.9.7",
     "spotify-url-info": "^3.2.15",
     "string-progressbar": "^1.0.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
-    "youtube-sr": "^4.3.11"
+    "typescript": "^5.5.2",
+    "youtube-sr": "^4.3.11",
+    "ytdl-core-discord": "github:Pilgrimeru/ytdl-core-discord"
   },
   "devDependencies": {
     "@types/i18n": "^0.13.12"
