--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.5.2",
     "youtube-sr": "^4.3.11",
-    "ytdl-core-discord": "github:Pilgrimeru/ytdl-core-discord"
+    "yt-stream": "^1.6.0"
   },
   "devDependencies": {
     "@types/i18n": "^0.13.12"
   },
   "optionalDependencies": {
-    "@discordjs/opus": "^0.9.0",
+    "opusscript": "^0.0.8",
     "bufferutil": "^4.0.8",
     "libsodium-wrappers": "^0.7.13",
     "sodium-native": "^4.1.1",
