--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Feature-rich Discord bot that allows you to play music from various sources, manage your music queue, and enjoy a seamless music experience in your Discord server.",
   "main": "./src/index.ts",
   "scripts": {
-    "start": "tsx ./src/index.ts",
-    "run": "node ./dist/index.js"
+    "start": "bun ./src/index.ts"
   },
   "author": "Elliott DE LUCA",
   "license": "MIT",
@@ -17,30 +16,32 @@
     "axios": "^1.7.7",
     "discord.js": "^14.16.2",
     "dotenv": "^16.4.5",
-    "ffmpeg-static": "^5.2.0",
+    "ffprobe-static": "^3.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "i18n": "^0.15.1",
     "isomorphic-unfetch": "^4.0.2",
     "lru-cache": "^11.0.1",
     "lyrics-finder": "^21.7.0",
-    "music-metadata": "^10.5.0",
+    "opusscript": "^0.1.1",
     "play-dl": "^1.9.7",
     "spotify-url-info": "^3.2.16",
     "string-progressbar": "^1.0.4",
+    "tweetnacl": "^1.0.3",
     "youtube-sr": "^4.3.11",
     "yt-stream": "^1.7.4"
   },
   "devDependencies": {
+    "@types/ffprobe-static": "^2.0.3",
+    "@types/fluent-ffmpeg": "^2.1.26",
     "@types/i18n": "^0.13.12",
-    "ts-node": "^10.9.2",
-    "tsx": "^4.19.1",
+    "bun-types": "^1.1.31",
     "typescript": "^5.6.2"
   },
   "optionalDependencies": {
+    "ffmpeg-static": "^5.2.0",
     "bufferutil": "^4.0.8",
     "libsodium-wrappers": "^0.7.15",
-    "opusscript": "^0.1.1",
     "sodium-native": "^4.2.0",
-    "tweetnacl": "^1.0.3",
     "utf-8-validate": "^6.0.4"
   }
 }
