--- a/config.env.example
+++ b/config.env.example
@@ -4,6 +4,9 @@ PREFIX = "!" # Command prefix
 AUTO_DELETE = true # Set to true to automatically delete bot responses
 LOCALE = "en" # Language setting, it must exist in the local folder
 STAY_TIME = 30 # Duration before disconnection when the bot is alone
-AUDIO_QUALITY = 0 # 0 = minimum, 2 = maximum
 DEFAULT_VOLUME = 100 # Default volume setting [0;100]
 MAIN_COLOR = "#69ADC7" # Main color for the bot
+
+# ADVANCED #
+CACHE_SIZE = 50 # In Mb
+USERAGENT = "Mozilla/5.0 (Windows NT 11.0; Win64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.5653.214 Safari/537.36"
