--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
     "@discordjs/voice": "^0.17.0",
     "array-move": "^4.0.0",
     "axios": "^1.7.7",
+    "bufferutil": "^4.0.8",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
     "i18n": "^0.15.1",
     "isomorphic-unfetch": "^4.0.2",
-    "lru-cache": "^11.0.1",
+    "lru-cache": "^11.0.2",
     "lyrics-finder": "^21.7.0",
     "opusscript": "^0.1.1",
     "play-dl": "^1.9.7",
+    "sodium-native": "^4.2.1",
     "spotify-url-info": "^3.2.17",
     "string-progressbar": "^1.0.4",
-    "tweetnacl": "^1.0.3",
+    "utf-8-validate": "^6.0.4",
     "youtube-sr": "^4.3.11",
     "yt-stream": "^1.7.4"
   },
@@ -37,10 +39,6 @@
     "typescript": "^5.6.3"
   },
   "optionalDependencies": {
-    "ffmpeg-static": "^5.2.0",
-    "bufferutil": "^4.0.8",
-    "libsodium-wrappers": "^0.7.15",
-    "sodium-native": "^4.2.1",
-    "utf-8-validate": "^6.0.4"
+    "ffmpeg-static": "^5.2.0"
   }
 }
