add STAY_TIME deactivation option

--- a/config.env.example
+++ b/config.env.example
@@ -3,7 +3,7 @@ MAX_PLAYLIST_SIZE = 500 # Maximum number of music fetches per playlist
 PREFIX = "!" # Command prefix
 AUTO_DELETE = true # Set to true to automatically delete bot responses
 LOCALE = "en" # Language setting, it must exist in the local folder
-STAY_TIME = 30 # Duration before disconnection when the bot is alone
+STAY_TIME = 30 # Duration in seconds to disconnect when the bot is alone (0 to disable)
 DEFAULT_VOLUME = 100 # Default volume setting [0;100]
 MAIN_COLOR = "#69ADC7" # Main color for the bot
 
