feat: add autocomplete

--- a/config.env.example
+++ b/config.env.example
@@ -2,6 +2,7 @@ TOKEN = "token" # your discord token
 MAX_PLAYLIST_SIZE = 500 # Maximum number of music fetches per playlist
 PREFIX = "!" # Command prefix
 AUTO_DELETE = true # Set to true to automatically delete bot responses
+AUTOCOMPLETE = true # Set to true to enable autocomplete for play and insert.
 LOCALE = "en" # Language setting, it must exist in the local folder
 STAY_TIME = 30 # Duration in seconds to disconnect when the bot is alone (0 to disable)
 DEFAULT_VOLUME = 100 # Default volume setting [0;100]
