--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "type": "module",
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
+    "@vreden/youtube_scraper": "^1.2.6",
     "array-move": "^4.0.0",
     "axios": "^1.8.1",
     "bufferutil": "^4.0.9",
@@ -28,8 +29,7 @@
     "spotify-url-info": "^3.2.18",
     "string-progressbar": "^1.0.4",
     "utf-8-validate": "^6.0.5",
-    "youtube-sr": "^4.3.11",
-    "ytmusic_api_unofficial": "^2.0.20"
+    "youtube-sr": "^4.3.11"
   },
   "devDependencies": {
     "@types/ffprobe-static": "^2.0.3",
