--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "type": "module",
   "dependencies": {
     "@discordjs/voice": "^0.18.0",
-    "@vreden/youtube_scraper": "^1.2.6",
     "array-move": "^4.0.0",
     "axios": "^1.8.3",
     "bufferutil": "^4.0.9",
@@ -20,6 +19,7 @@
     "dotenv": "^16.4.7",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.3",
+    "got": "^14.4.7",
     "i18n": "^0.15.1",
     "isomorphic-unfetch": "^4.0.2",
     "lru-cache": "^11.0.2",
@@ -39,8 +39,5 @@
     "bun-types": "^1.2.5",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
-  },
-  "optionalDependencies": {
-    "ffmpeg-static": "^5.2.0"
   }
 }
