fix: add ffmpeg-static to optional dependencies

--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "bun-types": "^1.2.5",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
+  },
+  "optionalDependencies": {
+    "ffmpeg-static": "^5.2.0"
   }
 }
