fix: update USERAGENT and limitRate in YouTubeStreamConverter, add headers for reduced bot detection

--- a/config.env.example
+++ b/config.env.example
@@ -10,4 +10,4 @@ MAIN_COLOR = "#69ADC7" # Main color for the bot
 
 # ADVANCED #
 CACHE_SIZE = 50 # In Mb
-USERAGENT = "Mozilla/5.0 (Windows NT 11.0; Win64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/112.0.5653.214 Safari/537.36"
+USERAGENT = "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/124.0.0.0 Safari/537.36"
